--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/task1.css">
-    <link rel="stylesheet" href="css/sec2.css">
+    <link rel="stylesheet" href="./task1.css">
+    <link rel="stylesheet" href="./sec2.css">
     <link rel="icon" href="images/logo.jpg" type="image">
     <title>intercrowd</title>
 </head>
