--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./task1.css">
     <link rel="stylesheet" href="./sec2.css">
-    <link rel="icon" href="images/logo.jpg" type="image">
+    <link rel="icon" href="logo.jpg" type="image">
     <title>intercrowd</title>
 </head>
 <body style="background-image: url('pexels-bich-tran-669996.jpg'); " class="b">
@@ -19,7 +19,7 @@
 
                 <nav class="flex justify-spacebetween">
                     
-                    <div class="flex item-center title1"><img class="logo" src="images/logo.jpg" alt="logo"><h1>Intern Crowd</h1></div>
+                    <div class="flex item-center title1"><img class="logo" src="logo.jpg" alt="logo"><h1>Intern Crowd</h1></div>
                     <ul class="item flex item-center">
                         <li><a href="#home">Home</a> </li>
                         <li><a href="https://interncrowd.in/internship.html">Internship</a> </li>
@@ -42,7 +42,7 @@
                         </a>
                     </div>
                     <div class="top-right">
-                        <img class="image justify-spacebetween item-center" src="images/Student-Internship.jpg" alt="image">
+                        <img class="image justify-spacebetween item-center" src="Student-Internship.jpg" alt="image">
                     </div>    
                 </div>  
                 
@@ -52,26 +52,26 @@
                 <br><br>
                 <div class="row">
                     <div class="column">
-                        <img class="img1" src="images/web.jpg" alt="webdevelopment">
+                        <img class="img1" src="web.jpg" alt="webdevelopment">
                         <h3 class="subt">Web Development</h3>
                         <p class="p1">Website needs to work across all devices and it needs to be fast as possible.</p>
                     </div>
                     <div class="column">
-                        <img class="img1" src="images/java1.jpg" alt="javaimg">
+                        <img class="img1" src="java1.jpg" alt="javaimg">
                         <h3 class="subt">Java Development</h3>
                         <p class="p1">It includes owning a particular application or working on several at one time.</p>
                     </div>
                     <div class="column">
-                        <img class="img1" src="images/android.jpg" alt="javaimg">
+                        <img class="img1" src="android.jpg" alt="javaimg">
                         <h3 class="subt">Android Development</h3>
                         <p class="p1">It is created for making devices running the operating systems of Android.</p>
                     </div>
                     <div class="column">
-                        <img class="img1" src="images/c++.jpg" alt="cppimg">
+                        <img class="img1" src="c++.jpg" alt="cppimg">
                         <h3 class="subt">C / C++ Programing</h3>   
                     <p class="p1"> Develepment It is a general-purpose programming and coding language.</p>                 </div>
                     <div class="column">
-                        <img class="img1" src="images/cloud.jpg" alt="javaimg">
+                        <img class="img1" src="cloud.jpg" alt="javaimg">
                         <h3 class="subt">Cloud Computing</h3>       
                         <p class="p1">It is the delivery of distinct services over the Internet.</p>
                     </div>
@@ -86,11 +86,11 @@
                     <hr>
                     <p class="p" >Intern Crowd Is An Online Coding Platform that Offers Specially Programming Courses For Students. You've Probably Heard About How Programming Shines With New Technology. We Have To Be Aware Of How Programming Can Initiate New Innovations. What's A Better Approach For Our Students Is To Grasp And Adapt To The Technology Around Them.</p>
                     <div>
-                        <a href="https://t.me/Ic100_InternCrowd" ><img class="socialmedia" src="images/telegram.jpg" alt="telegram">
+                        <a href="https://t.me/Ic100_InternCrowd" ><img class="socialmedia" src="telegram.jpg" alt="telegram">
                         </a>
-                        <a href="https://www.instagram.com/interncrowd/" > <img class="socialmedia" src="images/insta.jpg" alt="instagram">
+                        <a href="https://www.instagram.com/interncrowd/" > <img class="socialmedia" src="insta.jpg" alt="instagram">
                         </a>
-                        <a href="https://www.linkedin.com/in/intern-crowd-564b16253/" ><img class="socialmedia" src="images/linkding.jpg" alt="linkedin">
+                        <a href="https://www.linkedin.com/in/intern-crowd-564b16253/" ><img class="socialmedia" src="linkding.jpg" alt="linkedin">
                         </a>
                     </div>
                 </div>
